# RowdyBottyPiper

./: .env_template  .gitignore  DockerDeployment_YAMLBots.md  DockerQuickStart.md  README.md  YamlConfigGuide.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  dev-build.yml  prod-build-release.yml
bot_framework/actions/: action.py  click.py  login.py  logout.py  navigate.py  scrape.py
bot_framework/core/: action.py  bot.py  context.py
bot_framework/logging/: metrics.py  structured_logger.py
examples/: example.py
rbp/cli/: shell.py
rbp/config/: registry.py
rbp/modules/scripts/: bing.py
rbp/modules/utils/: secret_reader.py
rowdybottypiper/actions/: action.py  action_status.py  alert.py  click.py  download.py  download_multiple.py  login.py  logout.py  navigate.py  peruse.py  scrape.py  submitform.py
rowdybottypiper/actions/browser/: alert.py
rowdybottypiper/actions/clickable/: base.py  click.py  download.py
rowdybottypiper/actions/forms/: base.py  login.py  submit_form.py
rowdybottypiper/actions/navigation/: navigate.py
rowdybottypiper/bot/: context.py  main.py
rowdybottypiper/cli/: cli.py  init.py  main.py  runner.py  shell.py
rowdybottypiper/config/: action_loader.py  action_registry.py  bot_serializer.py  registry.py  settings.py
rowdybottypiper/core/: bot.py  context.py  yaml_bot_loader.py  yamlbotloader.py
rowdybottypiper/logging/: config.py  metrics.py  structured_logger.py
rowdybottypiper/services/: s3_uploader.py  scp_client.py
rowdybottypiper/utils/: realistic.py  s3_uploader.py  slackbot.py  validators.py
