[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rowdybottypiper"
version = "1.0.1"
description = "A bot framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = ""}]
license = {text = "MIT"}


dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
