[project]
name = "rowdybottypiper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.44",
    "botocore>=1.42.44",
    "bs4>=0.0.2",
    "click>=8.3.1",
    "cmd2>=3.2.0",
    "nodriver>=0.48.1",
    "paramiko>=4.0.0",
    "pyaml>=26.2.1",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "seleniumbase>=4.46.4",
    "slack-sdk>=3.39.0",
    "tqdm>=4.67.3",
]

[project.scripts]
rbp = "rbp.cli.shell:main"
